tests/NormalTests/paczka1/small_fuzzy/97796719.err
Error in line 4: ANpCkw S310 88,7
Error in line 8: Fo51xi S318 47,0
